@@ -52,10 +52,12 @@ static const char *license_text[] = { \
     "the terms of the GNU General Public License as published by the Free",
     "Software Foundation, either version 3 of the License,"
         " or (at your option)",
-    "any later version.  Additionally for the MUNGE library (libmunge), you",
-    "can redistribute it and/or modify it under the terms of the GNU Lesser",
-    "General Public License as published by the Free Software Foundation,",
-    "either version 3 of the License, or (at your option) any later version.",
+    "any later version.",
+    "",
+    "Additionally for the MUNGE library (libmunge), you can redistribute",
+    "it and/or modify it under the terms of the GNU Lesser General Public",
+    "License as published by the Free Software Foundation, either version 3",
+    "of the License, or (at your option) any later version.",
     "",
     "MUNGE is distributed in the hope that it will be useful, but WITHOUT",
     "ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or",
