@@ -1,3 +1,7 @@
+2010-09-21  Chris Dunlap  <cdunlap@llnl.gov>
+
+	* src/libcommon/license.c: Tweaked spacing in license_text[].
+
 2010-09-08  Chris Dunlap  <cdunlap@llnl.gov>
 
 	* : Replaced _cipher_map_enum() & _md_map_enum() case statements with
